# x.uma

./: .gitignore  CLAUDE.md  buf.gen.yaml  buf.yaml  justfile  package.json
.claude/agents/: constraint-auditor.md  phase-planner.md
.claude/commands/: check-breaking.md  validate.md
.claude/plugins/rust-1337/: SKILL.md
.claude/research/: ext-proc-schema.md  gateway-api-patterns.md  gateway-api-schema.md
.claude/scripts/: pre-commit
.claude/skills/maintainer/: SKILL.md
.claude/skills/protocol-mastery/: SKILL.md
.github/workflows/: docs.yml
bumi/: SECURITY.md
bumi/src/: index.ts  matcher.ts  predicate.ts  string-matchers.ts  testing.ts  types.ts
bumi/src/http/: gateway.ts  inputs.ts  request.ts
bumi/tests/: security.test.ts  string-matchers.test.ts
docs/src/: README.md  SUMMARY.md
docs/src/development/: roadmap.md
docs/src/explain/: architecture.md  policy-landscape.md  why-aces.md
docs/src/guides/: adding-domain.md
docs/src/learn/: concepts.md  quick-start.md
docs/src/reference/: http.md  python.md  rust.md
p.uma/: README.md  SECURITY.md  pyproject.toml
p.uma/src/puma/: __init__.py  _matcher.py  _predicate.py  _string_matchers.py  _types.py  testing.py
p.uma/tests/: conftest.py  test_conformance.py  test_http_conformance.py  test_matcher.py  test_predicate.py  test_string_matchers.py
playground/: package.json  vite.config.ts
playground/src/: app.css  app.html
playground/src/lib/: engine.ts  types.ts
playground/src/routes/: +page.svelte
pr-preview/pr-13/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-76a1c5ef.js  searchindex-d13ad235.js
pr-preview/pr-4/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-c7954d56.js
puma/: README.md
puma/tests/: test_matcher.py  test_predicate.py
rumi/: Cargo.toml
rumi/core/src/: data_input.rs  field_matcher.rs  input_matcher.rs  matcher.rs  predicate.rs
rumi/crusts/python/: Cargo.toml  pyproject.toml
rumi/crusts/python/python/puma_crusty/: __init__.py
rumi/crusts/python/src/: config.rs  convert.rs  http_matcher.rs  lib.rs  matcher.rs  test_matcher.rs
rumi/crusts/python/tests/: test_hook_matcher.py  test_http_matcher.py  test_test_matcher.py
rumi/crusts/wasm/: Cargo.toml
rumi/crusts/wasm/src/: http_matcher.rs  lib.rs  matcher.rs  test_matcher.rs
rumi/crusts/wasm/tests/: http_matcher.test.ts  test_matcher.test.ts
rumi/ext/claude/: Cargo.toml
rumi/ext/claude/src/: compiler.rs  config.rs  lib.rs
rumi/ext/http/: Cargo.toml
rumi/ext/http/src/: lib.rs  simple.rs
rumi/ext/test/src/: config_fixture.rs  fixture.rs
(+54 files in other folders)
