[workspace]
resolver = "2"
members = ["core", "ext/test", "ext/http", "ext/claude", "crusts/python"]

# puma-crusty uses PyO3 extension-module (no libpython link) — test via maturin, not cargo test
default-members = ["core", "ext/test", "ext/http", "ext/claude"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mox-labs/x.uma"
authors = ["Yashodeep Vyas"]

[workspace.dependencies]
# Internal
rumi = { path = "core" }

# Testing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
